--- a/uitest/Tab/TabCon/CS_Calculator/CS_Calculator.csproj
+++ b/uitest/Tab/TabCon/CS_Calculator/CS_Calculator.csproj
@@ -137,6 +137,9 @@
     <PackageReference Include="MicrosoftExpressionInteractions">
       <Version>3.0.40218</Version>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
