モダールダイアログで表示

--- a/uitest/Tab/TabCon/TabCon/TabCon.csproj
+++ b/uitest/Tab/TabCon/TabCon/TabCon.csproj
@@ -301,6 +301,9 @@
     <Compile Include="Views\W_1.xaml.cs">
       <DependentUpon>W_1.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\W_1Window.xaml.cs">
+      <DependentUpon>W_1Window.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\X_1_1.xaml.cs">
       <DependentUpon>X_1_1.xaml</DependentUpon>
     </Compile>
@@ -407,6 +410,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\W_1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\W_1Window.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
