電卓Dllのサイズ変更と表示位置指定

--- a/uitest/calc/CalcTest/WpfApp1/WpfApp1.csproj
+++ b/uitest/calc/CalcTest/WpfApp1/WpfApp1.csproj
@@ -40,7 +40,7 @@
   <ItemGroup>
     <Reference Include="CS_Calculator, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\CS_Calculator\CS_Calculator.dll</HintPath>
+      <HintPath>..\..\..\Tab\TabCon\CS_Calculator\bin\Release\CS_Calculator.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
