--- a/uitest/Tab/TabCon/CS_Calculator/CS_Calculator.csproj
+++ b/uitest/Tab/TabCon/CS_Calculator/CS_Calculator.csproj
@@ -95,6 +95,9 @@
     <PackageReference Include="Expression.Interaction">
       <Version>3.0.40218</Version>
     </PackageReference>
+    <PackageReference Include="GrapeCity.Spread.WinForms">
+      <Version>14.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Infragistics.DataPresenter.DataSources.OData">
       <Version>16.1.1000</Version>
     </PackageReference>
