--- a/uitest/Tab/TabCon/TabCon/TabCon.csproj
+++ b/uitest/Tab/TabCon/TabCon/TabCon.csproj
@@ -83,6 +83,10 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GrapeCity.WPF.CalcEngine, Version=3.0.4501.2015, Culture=neutral, PublicKeyToken=6ccb469776ba232c, processorArchitecture=MSIL" />
+    <Reference Include="GrapeCity.WPF.Excel, Version=3.0.4501.2015, Culture=neutral, PublicKeyToken=6ccb469776ba232c, processorArchitecture=MSIL" />
+    <Reference Include="GrapeCity.WPF.PDF, Version=3.0.4501.2015, Culture=neutral, PublicKeyToken=6ccb469776ba232c, processorArchitecture=MSIL" />
+    <Reference Include="grapecity.wpf.spreadgrid, Version=3.0.4501.2015, Culture=neutral, PublicKeyToken=5c5c8ff7a6858ccc, processorArchitecture=MSIL" />
     <Reference Include="InfragisticsWPF4.Controls.Editors.XamCalendar.v12.2, Version=12.2.20122.1000, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL" />
     <Reference Include="InfragisticsWPF4.Controls.Editors.XamColorPicker.v12.2, Version=12.2.20122.1000, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL" />
     <Reference Include="InfragisticsWPF4.Controls.Editors.XamSlider.v12.2, Version=12.2.20122.1000, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL" />
@@ -101,10 +105,13 @@
     <Reference Include="ReachFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Printing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
@@ -502,6 +509,9 @@
     </PackageReference>
     <PackageReference Include="Google.Apis.Drive.v3">
       <Version>1.49.0.2166</Version>
+    </PackageReference>
+    <PackageReference Include="GrapeCity.Spread.WinForms">
+      <Version>14.0.0</Version>
     </PackageReference>
     <PackageReference Include="Infragistics.DataPresenter.DataSources.OData">
       <Version>16.1.1000</Version>
