--- a/uitest/calc/CalcTest/CS_Calculator/CS_Calculator.csproj
+++ b/uitest/calc/CalcTest/CS_Calculator/CS_Calculator.csproj
@@ -49,6 +49,18 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="InfragisticsWPF4.DataPresenter.v12.2, Version=12.2.20122.1000, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Infragistics\NetAdvantage 2012.2\WPF\CLR4.0\Bin\WPFOnly\InfragisticsWPF4.DataPresenter.v12.2.dll</HintPath>
+    </Reference>
+    <Reference Include="InfragisticsWPF4.Editors.v12.2, Version=12.2.20122.1000, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Infragistics\NetAdvantage 2012.2\WPF\CLR4.0\Bin\WPFOnly\InfragisticsWPF4.Editors.v12.2.dll</HintPath>
+    </Reference>
+    <Reference Include="InfragisticsWPF4.v12.2, Version=12.2.20122.1000, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Infragistics\NetAdvantage 2012.2\WPF\CLR4.0\Bin\WPFOnly\InfragisticsWPF4.v12.2.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
