--- a/uitest/calc/CalcTest/CS_Calculator/CS_Calculator.csproj
+++ b/uitest/calc/CalcTest/CS_Calculator/CS_Calculator.csproj
@@ -107,41 +107,44 @@
     <PackageReference Include="Expression.Interaction">
       <Version>3.0.40218</Version>
     </PackageReference>
+    <PackageReference Include="GrapeCity.Documents.Excel">
+      <Version>4.0.3</Version>
+    </PackageReference>
     <PackageReference Include="Infragistics.DataPresenter.DataSources.OData">
       <Version>16.1.1000</Version>
     </PackageReference>
     <PackageReference Include="LivetCask">
-      <Version>3.2.3.1</Version>
+      <Version>3.2.3.2</Version>
     </PackageReference>
     <PackageReference Include="LivetCask.Behaviors">
-      <Version>3.2.3.1</Version>
+      <Version>3.2.3.2</Version>
     </PackageReference>
     <PackageReference Include="LivetCask.Collections">
-      <Version>3.2.3.1</Version>
+      <Version>3.2.3.2</Version>
     </PackageReference>
     <PackageReference Include="LivetCask.Converters">
-      <Version>3.2.3.1</Version>
+      <Version>3.2.3.2</Version>
     </PackageReference>
     <PackageReference Include="LivetCask.Core">
-      <Version>3.2.3.1</Version>
+      <Version>3.2.3.2</Version>
     </PackageReference>
     <PackageReference Include="LivetCask.EventListeners">
-      <Version>3.2.3.1</Version>
+      <Version>3.2.3.2</Version>
     </PackageReference>
     <PackageReference Include="LivetCask.Messaging">
-      <Version>3.2.3.1</Version>
+      <Version>3.2.3.2</Version>
     </PackageReference>
     <PackageReference Include="LivetCask.Mvvm">
-      <Version>3.2.3.1</Version>
+      <Version>3.2.3.2</Version>
     </PackageReference>
     <PackageReference Include="LivetCask.StatefulModel">
-      <Version>3.2.3.1</Version>
+      <Version>3.2.3.2</Version>
     </PackageReference>
     <PackageReference Include="LivetCask2">
-      <Version>3.2.3.1</Version>
+      <Version>3.2.3.2</Version>
     </PackageReference>
     <PackageReference Include="LivetExtensions">
-      <Version>3.2.3.1</Version>
+      <Version>3.2.3.2</Version>
     </PackageReference>
     <PackageReference Include="MahApps.Metro">
       <Version>2.4.3</Version>
@@ -153,7 +156,7 @@
       <Version>6.1.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Web.WebView2">
-      <Version>1.0.664.37</Version>
+      <Version>1.0.705.50</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf">
       <Version>1.1.31</Version>
@@ -162,11 +165,17 @@
       <Version>3.0.40218</Version>
     </PackageReference>
     <PackageReference Include="MySql.Data">
-      <Version>8.0.22</Version>
+      <Version>8.0.23</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
+    <PackageReference Include="Spread.Services">
+      <Version>1.4.0</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
