--- a/uitest/calc/CalcTest/WpfApp1/WpfApp1.csproj
+++ b/uitest/calc/CalcTest/WpfApp1/WpfApp1.csproj
@@ -42,12 +42,23 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\CS_Calculator\bin\Debug\CS_Calculator.dll</HintPath>
     </Reference>
+    <Reference Include="GrapeCity.WPF.CalcEngine, Version=3.0.4501.2015, Culture=neutral, PublicKeyToken=6ccb469776ba232c, processorArchitecture=MSIL" />
+    <Reference Include="GrapeCity.WPF.Excel, Version=3.0.4501.2015, Culture=neutral, PublicKeyToken=6ccb469776ba232c, processorArchitecture=MSIL" />
+    <Reference Include="GrapeCity.WPF.PDF, Version=3.0.4501.2015, Culture=neutral, PublicKeyToken=6ccb469776ba232c, processorArchitecture=MSIL" />
+    <Reference Include="grapecity.wpf.spreadgrid, Version=3.0.4501.2015, Culture=neutral, PublicKeyToken=5c5c8ff7a6858ccc, processorArchitecture=MSIL" />
+    <Reference Include="grapecity.wpf.spreadsheet, Version=3.0.4501.2015, Culture=neutral, PublicKeyToken=a5fa960294d899e7, processorArchitecture=MSIL" />
     <Reference Include="InfragisticsWPF4.DataPresenter.v12.2, Version=12.2.20122.1000, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL" />
     <Reference Include="InfragisticsWPF4.Editors.v12.2, Version=12.2.20122.1000, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL" />
     <Reference Include="InfragisticsWPF4.v12.2, Version=12.2.20122.1000, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL" />
+    <Reference Include="ReachFramework" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Printing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -97,6 +108,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Properties\Licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -110,8 +122,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="GrapeCity.Documents.Excel">
+      <Version>4.0.3</Version>
+    </PackageReference>
     <PackageReference Include="LivetCask">
-      <Version>3.2.3.1</Version>
+      <Version>3.2.3.2</Version>
+    </PackageReference>
+    <PackageReference Include="Spread.Services">
+      <Version>1.4.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
