--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,7 @@ uitest/WebTest/WebTest2/WebTest2/bin/Debug/WebTest2.exe.WebView2/EBWebView/Smart
 uitest/WebTest/WebTest2/WebTest2/bin/Debug/WebTest2.exe.WebView2/EBWebView/SmartScreen/remote/synchronousLookupUris_637437761237665605
 uitest/WebTest/WebTest2/WebTest2/bin/Debug/WebTest2.exe.WebView2/EBWebView/SmartScreen/remote/topTraffic
 uitest/WebTest/WebTest2/WebTest2/bin/Debug/WebTest2.exe.WebView2/EBWebView/SmartScreen/remote/topTraffic_637429101903046133
+uitest/CS_CalcTest/CS_CalcTest/.vs/CS_CalcTest/v15/Server/sqlite3/db.lock
+uitest/CS_CalcTest/CS_CalcTest/.vs/CS_CalcTest/v15/Server/sqlite3/storage.ide
+uitest/CS_CalcTest/CS_CalcTest/.vs/CS_CalcTest/v15/Server/sqlite3/storage.ide-shm
+uitest/CS_CalcTest/CS_CalcTest/.vs/CS_CalcTest/v15/Server/sqlite3/storage.ide-wal
