--- a/uitest/calc/CalcTest/WpfApp1/WpfApp1.csproj
+++ b/uitest/calc/CalcTest/WpfApp1/WpfApp1.csproj
@@ -81,7 +81,11 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Models\Product.cs" />
+    <Compile Include="ViewModels\CalcTestViewModel.cs" />
     <Compile Include="ViewModels\ParrtsTestViewModel.cs" />
+    <Compile Include="Views\CalcTestView.xaml.cs">
+      <DependentUpon>CalcTestView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ParrtsTestView.xaml.cs">
       <DependentUpon>ParrtsTestView.xaml</DependentUpon>
     </Compile>
@@ -89,6 +93,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\CalcTestView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\ParrtsTestView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
