--- a/uitest/calc/CalcTest/WpfApp1/Properties/Settings.settings
+++ b/uitest/calc/CalcTest/WpfApp1/Properties/Settings.settings
@@ -26,5 +26,11 @@
     <Setting Name="CalcResult" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="IsPO" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="設定" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
