--- a/uitest/calc/CalcTest/WpfApp1/Properties/Settings.settings
+++ b/uitest/calc/CalcTest/WpfApp1/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="設定" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="CalcVer" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
